[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "allure-tc-stats"
version = "0.1.0"
description = "CLI tool to generate CSV statistics from Allure report URLs"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.scripts]
allure-stats = "allure_tc_stats:main"

[tool.setuptools]
py-modules = ["allure_tc_stats"]